<resources>
    <string name="app_name">EatUp</string>
    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question1">Q1. Why is EatUp doing this?</string>
    <string name="answer1">A1. At EatUp we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material.  Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question2">Q2. How are you guys different?</string>
    <string name="answer2">A2. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for EatUp Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="question3">Q3. Why is EatUp doing this?</string>
    <string name="answer3">A3. At EatUp we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. EatUp Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question4">Q4. How are you guys different?</string>
    <string name="answer4">A4. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for EatUp Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>


</resources>